--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -142,21 +142,21 @@
   <div class="container">
     <h1>Welcome, Admin!</h1>
     <p>Manage your fashion empire with style and elegance.</p>
-
+    
     <div class="stats">
       <div class="card">
         <i class="fas fa-boxes"></i>
-        <h3>1,240</h3>
+        <h3>View</h3>
         <p>Total Products</p>
       </div>
       <div class="card">
         <i class="fas fa-user-friends"></i>
-        <h3>860</h3>
+        <h3>View</h3>
         <p>Registered Users</p>
       </div>
       <div class="card">
         <i class="fas fa-shopping-cart"></i>
-        <h3>450</h3>
+        <h3>View</h3>
         <p>Orders This Month</p>
       </div>
       <div class="card" onclick="window.location.href='adminSales.html'" style="cursor:pointer;">
